# Rehab-Plan-Generator

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  YOUKENTEIGI.md  compose.override.yaml  compose.yaml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/adapters/llm/: base.py  factory.py  gemini_client.py  ollama_client.py
backend/app/api/: dependencies.py
backend/app/api/v1/endpoints/: patients.py  plans.py  templates.py
backend/app/core/: constants.py
backend/app/infrastructure/db/: database.py  models.py
backend/app/infrastructure/repositories/: patient_repository.py  plan_repository.py
backend/app/schemas/: extraction_schemas.py  legacy_schemas.py  schemas.py
backend/app/usecases/: plan_generation.py
backend/app/usecases/utils/: context_builder.py  prompt_manager.py  prompts.py
backend/app/usecases/utils/templates/: item_regeneration.txt  plan_generation.txt
backend/migrations/: env.py
backend/migrations/versions/: 39024f96600b_add_analysis_columns_to_patients_view.py  3b7d24c1aae5_initial_migration.py  4dd0341f8ee7_add_plan_templates_table.py
backend/requirements/: _base.txt
backend/tests/: conftest.py
backend/tests/integration/api/v1/: test_patients.py  test_plans.py
backend/tests/unit/: test_context_builder.py
backend/tests/unit/schemas/: test_extraction_schemas.py  test_schema_coverage.py
backend/tests/unit/usecases/: test_plan_generation.py
backend/tools/: check_duplicates.py  check_keys.py  check_labels.py  check_seeder_schema.py  seeder.py
frontend/: Dockerfile  index.html  (+3 more)
(+41 files in other folders)
